app/main/default/objects/Flosum__Flosum_Task__c/fields/Flosum__BranchId__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Flosum__BranchId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>Flosum__Branch__c</referenceTo>
        <relationshipName>Flosum_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>