app/main/default/objects/Flosum__Flosum_Task__c/fields/Flosum__Comment__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Flosum__Comment__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>