app/main/default/objects/Flosum__Flosum_Task__c/fields/Flosum__Job_Type__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Flosum__Job_Type__c</fullName>
        <label>Job Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SYNC</fullName>
                </value>
                <value>
                    <fullName>BUILD</fullName>
                </value>
                <value>
                    <fullName>REVIEW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>