app/main/default/objects/Flosum__Flosum_Task__c/fields/Flosum__PatchId__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Flosum__PatchId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deployment</label>
        <referenceTo>Flosum__Patch__c</referenceTo>
        <relationshipName>Flosum_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>