app/main/default/objects/Flosum__Flosum_Task__c/fields/Flosum__RepositoryId__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Flosum__RepositoryId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Repository</label>
        <referenceTo>Flosum__Repository__c</referenceTo>
        <relationshipName>Flosum_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>