app/main/default/objects/Flosum__Flosum_Task__c/fields/Flosum__State__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Flosum__State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>QUEUED</fullName>
                </value>
                <value>
                    <fullName>IN PROGRESS</fullName>
                </value>
                <value>
                    <fullName>COMPLETED</fullName>
                </value>
                <value>
                    <fullName>CANCELED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>