app/main/default/objects/Flosum__Flosum_Task__c/fields/Flosum__SyncId__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Flosum__SyncId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sync Job</label>
        <referenceTo>Flosum__Sync_Job__c</referenceTo>
        <relationshipName>Flosum_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>